# ZNote

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  README_zh.md  vcpkg.json
.github/workflows/: build.yml  code-quality.yml  release.yml
ZNote/: CMakeLists.txt  CONTRIBUTING.md  main.cpp  resources.qrc
ZNote-dev/: CHANGELOG.md  CHANGELOG_zh.md  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING_zh.md  LICENSE  README.md  README_zh.md  build.bat  config.json  config.json.example  copy_file.bat  copy_file.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
ZNote-dev/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ZNote-dev/.github/workflows/: release.yml
ZNote-dev/assets/style/: dark.qss  light.qss
ZNote-dev/include/: configmanager.h  downloadmanager.h  downloadqueue.h  historymanager.h  misc.h  resolvethreadpool.h  task.h  taskqueue.h  urlparser.h  videodownloader.h  videoresolve.h
ZNote-dev/include/component/: comboboxdelegate.h  historymodel.h  markdownfilesystem.h  switchbutton.h  videocard.ui  videomodel.h  videotablemodel.h
ZNote-dev/include/core/: filebrowser.h  fileresolve.h
ZNote-dev/include/core/download/: task.h  videodownloader.h
ZNote-dev/include/core/interfaces/: idownloadservice.h  ihistoryservice.h
ZNote-dev/include/implement/: jsonhistorybackend.h  sqlitehisotrybackend.h
ZNote-dev/include/interface/: ihistorybackend.h
ZNote-dev/include/services/: configservice.h  downloadservice.h
ZNote-dev/include/ui/: mainwindow.h
ZNote-dev/include/ui/widgets/: downloadwidget.h  settingswidget.h
ZNote-dev/include/utils/: logger.h
ZNote-dev/include/web/: markdownbridge.h
ZNote-dev/src/: configmanager.cpp  downloadmanager.cpp  downloadqueue.cpp  historymanager.cpp  misc.cpp  resolvethreadpool.cpp  taskqueue.cpp  urlparser.cpp  videodownloader.cpp  videoresolve.cpp
ZNote-dev/src/component/: VideoCard.cpp  checkboxdelegate.cpp  comboboxdelegate.cpp  historymodel.cpp  markdownfilesystem.cpp  videomodel.cpp
ZNote-dev/src/core/: filebrowser.cpp  fileresolve.cpp
ZNote-dev/src/core/download/: taskqueue.cpp  videodownloader.cpp
ZNote-dev/src/implement/: jsonhistorybackend.cpp  sqlitehistorybackend.cpp
ZNote-dev/src/ui/: mainwindow.cpp  mainwindow.ui
ZNote-dev/src/ui/widgets/: downloadwidget.cpp  settingswidget.cpp
ZNote-dev/src/utils/: downloadutils.cpp
ZNote-dev/src/web/: markdownbridge.cpp
ZNote/.github/workflows/: build.yml
ZNote/assets/style/: app.qss  dark.qss
ZNote/include/app/: application.h
ZNote/include/component/: checkboxdelegate.h  historymodel.h  videomodel.h
ZNote/include/core/download/: taskqueue.h  urlparser.h
ZNote/include/core/interfaces/: iconfigservice.h
ZNote/include/services/: historyservice.h
ZNote/include/ui/widgets/: historywidget.h
ZNote/include/utils/: downloadutils.h  stylemanager.h
ZNote/src/app/: application.cpp
ZNote/src/component/: historymodel.cpp  videomodel.cpp
ZNote/src/core/download/: urlparser.cpp
ZNote/src/services/: configservice.cpp  downloadservice.cpp  historyservice.cpp
ZNote/src/ui/widgets/: downloadwidget.cpp  historywidget.cpp
ZNote/src/utils/: downloadutils.cpp  logger.cpp  stylemanager.cpp
